# Engine

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md
cmake_deps/: FindSOIL.cmake
res/shaders/: SSAO.fs  SSAO.vs  atmospheric_scattering.fs  atmospheric_scattering.vs  geometry.fs  geometry.tcs  geometry.tcs_s  geometry.tes  geometry.tes_s  geometry.vs  geometry.vs_s  geometry.vs_t  lighting.fs  lighting.vs  no_lighting.fs  no_lighting.vs  shadow_map.fs  shadow_map.vs  shadow_mapping.fs
res/tex/dds/: K2.dds  T_Brick_Yellow_D.dds  T_Brick_Yellow_DI.dds  T_Brick_Yellow_N.dds  T_Tile_White_DI.dds  T_Tile_White_N.dds  all.dds  block_AO.dds  block_D.dds  block_DI.dds  block_N.dds  block_R.dds  brick_albedo.dds  brick_metalness.dds  brick_roughness.dds  brushed_metal_N.dds  default_N.dds  greasy_D.dds  greasy_M.dds  greasy_N.dds  greasy_R.dds  marble_AO.dds  marble_D.dds  marble_DI.dds  marble_M.dds  marble_N.dds  marble_R.dds  rock_AO.dds  rock_D.dds  rock_DI.dds  rock_N.dds  rock_R.dds  rough_rock_AO.dds  rough_rock_D.dds  rough_rock_DI.dds  rough_rock_N.dds  rough_rock_R.dds  rust_D.dds  rust_M.dds  rust_N.dds  (+6 more)
src/base/: CMakeLists.txt  manager.hh
src/debug/: CMakeLists.txt  debug_manager.cc  debug_manager.hh  log.cc  log.hh  utils.cc  utils.hh
src/engine/: CMakeLists.txt  Makefile  engine.cc  engine.hh  engine.hxx
src/event/: channel.hh  events.hh  handler.hh
src/pool/: job.hh  thread_pool.hh  worker.hh
src/render_backend/: CMakeLists.txt  backend_plugins.hh  glsl_shader_generator.cc  opengl_backend.cc  opengl_backend.hh  opengl_backend_utils.cc  opengl_backend_utils.hh  opengl_passes.hh  opengl_pipeline_state.cc  opengl_pipeline_state.hh  opengl_shader_backend.cc  opengl_shader_backend.hh  opengl_shader_generator.cc  opengl_shader_generator.hh  opengl_shader_generators.hh  opengl_shader_pass.hh  opengl_shader_pass_atmosphere.cc  opengl_shader_pass_atmosphere.hh  opengl_shader_pass_geometry.cc  opengl_shader_pass_geometry.hh  opengl_shader_pass_lighting.cc  opengl_shader_pass_lighting.hh  opengl_shader_pass_no_lighting.cc  opengl_shader_pass_no_lighting.hh  opengl_shader_pass_shadow_map.cc  opengl_shader_pass_shadow_map.hh  opengl_shader_pass_ssao.cc  opengl_shader_pass_ssao.hh  render_backend.hh  render_manager.cc  render_manager.hh  shader_generator.hh  shader_grammar.hh  shader_grammar_actions.hh  shader_parser.cc  shader_parser.hh  shader_translation_errors.hh  shader_translator.cc  shader_translator.hh  shader_translator_state.hh  (+3 more)
src/resource/: CMakeLists.txt  assimp_loader.cc  assimp_loader.hh  dds_loader.cc  dds_loader.hh  entity.hh  gl_mesh.cc  gl_mesh.hh  loader.hh  loaders.hh  mesh.cc  mesh.hh  model_loader.hh  obj_loader.cc  obj_loader.hh  resource_manager.cc  resource_manager.hh  soil_loader.cc  soil_loader.hh  streamed_texture.cc  streamed_texture.hh  texture_kind.hh  texture_loader.hh
src/scene/: CMakeLists.txt  camera.cc  camera.hh  scene_graph.hh  scene_graphs.hh  scene_manager.cc  scene_manager.hh  vector_graph.cc  vector_graph.hh
src/ui/: CMakeLists.txt  base_ui.hh  glfw_ui.cc  glfw_ui.hh  ui_manager.cc  ui_manager.hh  uis.hh
src/utils/: CMakeLists.txt  concurrent_queue.hh  utils.cc  utils.hh
tests/debug/: CMakeLists.txt  main.cc
tests/shader_parser/: invald_comment_yep  invalid_backend_version  lol  missing_semicol  missing_vardec_init
